--- a/client/src/app/site/motions/modules/motion-detail/components/motion-detail/motion-detail.component.html
+++ b/client/src/app/site/motions/modules/motion-detail/components/motion-detail/motion-detail.component.html
@@ -546,7 +546,7 @@
                     mat-button
                     [matMenuTriggerFor]="changeRecoMenu"
                     *ngIf="
-                        motion && ((allChangingObjects && allChangingObjects.length) || motion.modified_final_version)
+                        motion && (allChangingObjectsLength || motion.modified_final_version)
                     "
                 >
                     <mat-icon>rate_review</mat-icon>
@@ -1002,7 +1002,7 @@
         mat-menu-item
         (click)="setChangeRecoMode(ChangeRecoMode.Changed)"
         [ngClass]="{ selected: crMode === ChangeRecoMode.Changed }"
-        *ngIf="allChangingObjects && allChangingObjects.length"
+        *ngIf="allChangingObjectsLength > 0"
     >
         {{ 'Changed version' | translate }}
     </button>
@@ -1010,7 +1010,7 @@
         mat-menu-item
         (click)="setChangeRecoMode(ChangeRecoMode.Diff)"
         [ngClass]="{ selected: crMode === ChangeRecoMode.Diff }"
-        *ngIf="allChangingObjects && allChangingObjects.length"
+        *ngIf="allChangingObjectsLength > 0"
     >
         {{ 'Diff version' | translate }}
     </button>
@@ -1018,7 +1018,7 @@
         mat-menu-item
         (click)="setChangeRecoMode(ChangeRecoMode.Final)"
         [ngClass]="{ selected: crMode === ChangeRecoMode.Final }"
-        *ngIf="motion && !motion.isParagraphBasedAmendment() && allChangingObjects && allChangingObjects.length"
+        *ngIf="motion && !motion.isParagraphBasedAmendment() && allChangingObjectsLength > 0"
     >
         {{ 'Final version' | translate }}
     </button>
