--- a/client/src/app/site/motions/modules/motion-detail/components/motion-detail/motion-detail.component.html
+++ b/client/src/app/site/motions/modules/motion-detail/components/motion-detail/motion-detail.component.html
@@ -235,7 +235,7 @@
                 mat-stroked-button
                 color="accent"
             >
-                <mat-icon>thumb_down</mat-icon>
+                <mat-icon>close</mat-icon>
                 {{ 'Unsupport' | translate }}
             </button>
             <!-- show supporters (TODO: open in dialog) -->
