--- a/client/src/app/site/assignments/modules/assignment-poll/components/assignment-poll-vote/assignment-poll-vote.component.html
+++ b/client/src/app/site/assignments/modules/assignment-poll/components/assignment-poll-vote/assignment-poll-vote.component.html
@@ -87,7 +87,7 @@
                         [ngClass]="getGlobalYesClass(delegation)"
                         [disabled]="isDeliveringVote(delegation)"
                     >
-                        <mat-icon>thumb_up</mat-icon>
+                        <mat-icon>check</mat-icon>
                     </button>
                     <span class="vote-label">
                         {{ PollPropertyVerbose.global_yes | translate }}
@@ -102,7 +102,7 @@
                         [ngClass]="getGlobalNoClass(delegation)"
                         [disabled]="isDeliveringVote(delegation)"
                     >
-                        <mat-icon>thumb_down</mat-icon>
+                        <mat-icon>close</mat-icon>
                     </button>
                     <span class="vote-label">
                         {{ PollPropertyVerbose.global_no | translate }}
@@ -117,7 +117,7 @@
                         [ngClass]="getGlobalAbstainClass(delegation)"
                         [disabled]="isDeliveringVote(delegation)"
                     >
-                        <mat-icon>trip_origin</mat-icon>
+                        <mat-icon>circle</mat-icon>
                     </button>
                     <span class="vote-label">
                         {{ PollPropertyVerbose.global_abstain | translate }}
