--- a/client/src/app/shared/components/jitsi/jitsi.component.scss
+++ b/client/src/app/shared/components/jitsi/jitsi.component.scss
@@ -56,6 +56,7 @@
 
     .jitsi-bar {
         display: flex;
+        position: relative;
         justify-content: flex-end;
         $wrapper-padding: 5px;
         $bar-height: 40px;
@@ -90,10 +91,19 @@
         }
 
         .list-wrapper {
+            position: relative;
             pointer-events: all;
             min-height: $bar-height;
             padding-top: $wrapper-padding;
             border-top-right-radius: 4px;
+
+            .applause {
+                position: absolute;
+                top: 0;
+                width: 30px;
+                left: -30px;
+                bottom: 50px;
+            }
 
             .toggle-list-button {
                 position: relative;
