--- a/client/src/assets/styles/component-themes.scss
+++ b/client/src/assets/styles/component-themes.scss
@@ -48,6 +48,7 @@ $narrow-spacing: (
 @import './app/shared/components/list-view-table/list-view-table.component.scss-theme.scss';
 @import './app/site/common/components/user-statistics/user-statistics.component.scss-theme.scss';
 @import './app/site/login/components/login-wrapper/login-wrapper.component.scss-theme.scss';
+@import './app/shared/components/progress/progress.component.scss-theme.scss';
 
 /** Mix the component-related style-rules. Every single custom style goes here */
 @mixin openslides-components-theme($theme) {
@@ -74,6 +75,7 @@ $narrow-spacing: (
     @include os-list-view-table-theme($theme);
     @include os-user-statistics-style($theme);
     @include os-login-wrapper-theme($theme);
+    @include os-progress-theme($theme);
 }
 
 .openslides-default-light-theme {
@@ -136,7 +138,7 @@ $narrow-spacing: (
 /**
  * Custom configuration for light themes
  */
- [class^="openslides-"][class*="-light-theme"] {
+[class^='openslides-'][class*='-light-theme'] {
     .logo-container {
         img.dark {
             display: none;
@@ -150,7 +152,7 @@ $narrow-spacing: (
 /**
  * Custom configuration for dark themes
  */
- [class^="openslides-"][class*="-dark-theme"] {
+[class^='openslides-'][class*='-dark-theme'] {
     color: white;
     .logo-container {
         img.dark {
